--- a/src/app/pages/tables/tables.component.html
+++ b/src/app/pages/tables/tables.component.html
@@ -19,14 +19,14 @@
               <div class=" col-md-4 px-md-1">
                 <div class=" form-group">
                   <label> Room Type Code </label>
-                  <input class=" form-control" placeholder="hackpro..." type="text" name="roomTypeCode"
+                  <input class=" form-control" placeholder="RoomType..." type="text" name="roomTypeCode"
                     [(ngModel)]="roomInfo.roomTypeCode" />
                 </div>
               </div>
               <div class=" col-md-4 pl-md-1">
                 <div class=" form-group">
                   <label> Room Type Name </label>
-                  <input class=" form-control" placeholder="sharing..." type="text" name="roomTypeName"
+                  <input class=" form-control" placeholder="RoomType Name..." type="text" name="roomTypeName"
                     [(ngModel)]="roomInfo.roomTypeName" />
                 </div>
               </div>
