--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -15,7 +15,7 @@
                     disabled=""
                     placeholder="Company"
                     type="text"
-                    value="Creative Code Inc."
+                    value="Hotel"
                   />
                 </div>
               </div>
