--- a/src/assets/scss/custom-dashboard-theme/custom/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/custom-dashboard-theme/custom/_sidebar-and-main-panel.scss
@@ -455,8 +455,8 @@
     }
 
     > .content {
-        padding: 78px 30px 30px 280px;
-        min-height: calc(100vh - 70px);
+        padding: 78px 30px 0px 280px;
+        // min-height: calc(100vh - 70px);
     }
 
     > .navbar {
